docs/upbound-provider-aws/1.6/s3/v1beta1/bucketAnalyticsConfiguration.md
---
permalink: /upbound-provider-aws/1.6/s3/v1beta1/bucketAnalyticsConfiguration/
---

# s3.v1beta1.bucketAnalyticsConfiguration

"BucketAnalyticsConfiguration is the Schema for the BucketAnalyticsConfigurations API. Provides a S3 bucket analytics configuration resource."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withBucket(bucket)`](#fn-specforproviderwithbucket)
    * [`fn withFilter(filter)`](#fn-specforproviderwithfilter)
    * [`fn withFilterMixin(filter)`](#fn-specforproviderwithfiltermixin)
    * [`fn withName(name)`](#fn-specforproviderwithname)
    * [`fn withRegion(region)`](#fn-specforproviderwithregion)
    * [`fn withStorageClassAnalysis(storageClassAnalysis)`](#fn-specforproviderwithstorageclassanalysis)
    * [`fn withStorageClassAnalysisMixin(storageClassAnalysis)`](#fn-specforproviderwithstorageclassanalysismixin)
    * [`obj spec.forProvider.bucketRef`](#obj-specforproviderbucketref)
      * [`fn withName(name)`](#fn-specforproviderbucketrefwithname)
      * [`obj spec.forProvider.bucketRef.policy`](#obj-specforproviderbucketrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderbucketrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderbucketrefpolicywithresolve)
    * [`obj spec.forProvider.bucketSelector`](#obj-specforproviderbucketselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderbucketselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderbucketselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderbucketselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.bucketSelector.policy`](#obj-specforproviderbucketselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderbucketselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderbucketselectorpolicywithresolve)
    * [`obj spec.forProvider.filter`](#obj-specforproviderfilter)
      * [`fn withPrefix(prefix)`](#fn-specforproviderfilterwithprefix)
      * [`fn withTags(tags)`](#fn-specforproviderfilterwithtags)
      * [`fn withTagsMixin(tags)`](#fn-specforproviderfilterwithtagsmixin)
    * [`obj spec.forProvider.storageClassAnalysis`](#obj-specforproviderstorageclassanalysis)
      * [`fn withDataExport(dataExport)`](#fn-specforproviderstorageclassanalysiswithdataexport)
      * [`fn withDataExportMixin(dataExport)`](#fn-specforproviderstorageclassanalysiswithdataexportmixin)
      * [`obj spec.forProvider.storageClassAnalysis.dataExport`](#obj-specforproviderstorageclassanalysisdataexport)
        * [`fn withDestination(destination)`](#fn-specforproviderstorageclassanalysisdataexportwithdestination)
        * [`fn withDestinationMixin(destination)`](#fn-specforproviderstorageclassanalysisdataexportwithdestinationmixin)
        * [`fn withOutputSchemaVersion(outputSchemaVersion)`](#fn-specforproviderstorageclassanalysisdataexportwithoutputschemaversion)
        * [`obj spec.forProvider.storageClassAnalysis.dataExport.destination`](#obj-specforproviderstorageclassanalysisdataexportdestination)
          * [`fn withS3BucketDestination(s3BucketDestination)`](#fn-specforproviderstorageclassanalysisdataexportdestinationwiths3bucketdestination)
          * [`fn withS3BucketDestinationMixin(s3BucketDestination)`](#fn-specforproviderstorageclassanalysisdataexportdestinationwiths3bucketdestinationmixin)
          * [`obj spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination`](#obj-specforproviderstorageclassanalysisdataexportdestinations3bucketdestination)
            * [`fn withBucketAccountId(bucketAccountId)`](#fn-specforproviderstorageclassanalysisdataexportdestinations3bucketdestinationwithbucketaccountid)
            * [`fn withBucketArn(bucketArn)`](#fn-specforproviderstorageclassanalysisdataexportdestinations3bucketdestinationwithbucketarn)
            * [`fn withFormat(format)`](#fn-specforproviderstorageclassanalysisdataexportdestinations3bucketdestinationwithformat)
            * [`fn withPrefix(prefix)`](#fn-specforproviderstorageclassanalysisdataexportdestinations3bucketdestinationwithprefix)
            * [`obj spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnRef`](#obj-specforproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnref)
              * [`fn withName(name)`](#fn-specforproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnrefwithname)
              * [`obj spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnRef.policy`](#obj-specforproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnrefpolicy)
                * [`fn withResolution(resolution)`](#fn-specforproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnrefpolicywithresolution)
                * [`fn withResolve(resolve)`](#fn-specforproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnrefpolicywithresolve)
            * [`obj spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnSelector`](#obj-specforproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnselector)
              * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnselectorwithmatchcontrollerref)
              * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnselectorwithmatchlabels)
              * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnselectorwithmatchlabelsmixin)
              * [`obj spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnSelector.policy`](#obj-specforproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnselectorpolicy)
                * [`fn withResolution(resolution)`](#fn-specforproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnselectorpolicywithresolution)
                * [`fn withResolve(resolve)`](#fn-specforproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnselectorpolicywithresolve)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withBucket(bucket)`](#fn-specinitproviderwithbucket)
    * [`fn withFilter(filter)`](#fn-specinitproviderwithfilter)
    * [`fn withFilterMixin(filter)`](#fn-specinitproviderwithfiltermixin)
    * [`fn withName(name)`](#fn-specinitproviderwithname)
    * [`fn withStorageClassAnalysis(storageClassAnalysis)`](#fn-specinitproviderwithstorageclassanalysis)
    * [`fn withStorageClassAnalysisMixin(storageClassAnalysis)`](#fn-specinitproviderwithstorageclassanalysismixin)
    * [`obj spec.initProvider.bucketRef`](#obj-specinitproviderbucketref)
      * [`fn withName(name)`](#fn-specinitproviderbucketrefwithname)
      * [`obj spec.initProvider.bucketRef.policy`](#obj-specinitproviderbucketrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderbucketrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderbucketrefpolicywithresolve)
    * [`obj spec.initProvider.bucketSelector`](#obj-specinitproviderbucketselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderbucketselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderbucketselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderbucketselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.bucketSelector.policy`](#obj-specinitproviderbucketselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderbucketselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderbucketselectorpolicywithresolve)
    * [`obj spec.initProvider.filter`](#obj-specinitproviderfilter)
      * [`fn withPrefix(prefix)`](#fn-specinitproviderfilterwithprefix)
      * [`fn withTags(tags)`](#fn-specinitproviderfilterwithtags)
      * [`fn withTagsMixin(tags)`](#fn-specinitproviderfilterwithtagsmixin)
    * [`obj spec.initProvider.storageClassAnalysis`](#obj-specinitproviderstorageclassanalysis)
      * [`fn withDataExport(dataExport)`](#fn-specinitproviderstorageclassanalysiswithdataexport)
      * [`fn withDataExportMixin(dataExport)`](#fn-specinitproviderstorageclassanalysiswithdataexportmixin)
      * [`obj spec.initProvider.storageClassAnalysis.dataExport`](#obj-specinitproviderstorageclassanalysisdataexport)
        * [`fn withDestination(destination)`](#fn-specinitproviderstorageclassanalysisdataexportwithdestination)
        * [`fn withDestinationMixin(destination)`](#fn-specinitproviderstorageclassanalysisdataexportwithdestinationmixin)
        * [`fn withOutputSchemaVersion(outputSchemaVersion)`](#fn-specinitproviderstorageclassanalysisdataexportwithoutputschemaversion)
        * [`obj spec.initProvider.storageClassAnalysis.dataExport.destination`](#obj-specinitproviderstorageclassanalysisdataexportdestination)
          * [`fn withS3BucketDestination(s3BucketDestination)`](#fn-specinitproviderstorageclassanalysisdataexportdestinationwiths3bucketdestination)
          * [`fn withS3BucketDestinationMixin(s3BucketDestination)`](#fn-specinitproviderstorageclassanalysisdataexportdestinationwiths3bucketdestinationmixin)
          * [`obj spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination`](#obj-specinitproviderstorageclassanalysisdataexportdestinations3bucketdestination)
            * [`fn withBucketAccountId(bucketAccountId)`](#fn-specinitproviderstorageclassanalysisdataexportdestinations3bucketdestinationwithbucketaccountid)
            * [`fn withBucketArn(bucketArn)`](#fn-specinitproviderstorageclassanalysisdataexportdestinations3bucketdestinationwithbucketarn)
            * [`fn withFormat(format)`](#fn-specinitproviderstorageclassanalysisdataexportdestinations3bucketdestinationwithformat)
            * [`fn withPrefix(prefix)`](#fn-specinitproviderstorageclassanalysisdataexportdestinations3bucketdestinationwithprefix)
            * [`obj spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnRef`](#obj-specinitproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnref)
              * [`fn withName(name)`](#fn-specinitproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnrefwithname)
              * [`obj spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnRef.policy`](#obj-specinitproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnrefpolicy)
                * [`fn withResolution(resolution)`](#fn-specinitproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnrefpolicywithresolution)
                * [`fn withResolve(resolve)`](#fn-specinitproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnrefpolicywithresolve)
            * [`obj spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnSelector`](#obj-specinitproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnselector)
              * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnselectorwithmatchcontrollerref)
              * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnselectorwithmatchlabels)
              * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnselectorwithmatchlabelsmixin)
              * [`obj spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnSelector.policy`](#obj-specinitproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnselectorpolicy)
                * [`fn withResolution(resolution)`](#fn-specinitproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnselectorpolicywithresolution)
                * [`fn withResolve(resolve)`](#fn-specinitproviderstorageclassanalysisdataexportdestinations3bucketdestinationbucketarnselectorpolicywithresolve)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of BucketAnalyticsConfiguration

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"BucketAnalyticsConfigurationSpec defines the desired state of BucketAnalyticsConfiguration"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withBucket

```ts
withBucket(bucket)
```

"Name of the bucket this analytics configuration is associated with."

### fn spec.forProvider.withFilter

```ts
withFilter(filter)
```

"Object filtering that accepts a prefix, tags, or a logical AND of prefix and tags (documented below)."

### fn spec.forProvider.withFilterMixin

```ts
withFilterMixin(filter)
```

"Object filtering that accepts a prefix, tags, or a logical AND of prefix and tags (documented below)."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withName

```ts
withName(name)
```

"Unique identifier of the analytics configuration for the bucket."

### fn spec.forProvider.withRegion

```ts
withRegion(region)
```

"Region is the region you'd like your resource to be created in."

### fn spec.forProvider.withStorageClassAnalysis

```ts
withStorageClassAnalysis(storageClassAnalysis)
```

"Configuration for the analytics data export (documented below)."

### fn spec.forProvider.withStorageClassAnalysisMixin

```ts
withStorageClassAnalysisMixin(storageClassAnalysis)
```

"Configuration for the analytics data export (documented below)."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.bucketRef

"Reference to a Bucket in s3 to populate bucket."

### fn spec.forProvider.bucketRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.bucketRef.policy

"Policies for referencing."

### fn spec.forProvider.bucketRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.bucketRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.bucketSelector

"Selector for a Bucket in s3 to populate bucket."

### fn spec.forProvider.bucketSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.bucketSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.bucketSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.bucketSelector.policy

"Policies for selection."

### fn spec.forProvider.bucketSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.bucketSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.filter

"Object filtering that accepts a prefix, tags, or a logical AND of prefix and tags (documented below)."

### fn spec.forProvider.filter.withPrefix

```ts
withPrefix(prefix)
```

"Object prefix for filtering."

### fn spec.forProvider.filter.withTags

```ts
withTags(tags)
```

"Key-value map of resource tags."

### fn spec.forProvider.filter.withTagsMixin

```ts
withTagsMixin(tags)
```

"Key-value map of resource tags."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.storageClassAnalysis

"Configuration for the analytics data export (documented below)."

### fn spec.forProvider.storageClassAnalysis.withDataExport

```ts
withDataExport(dataExport)
```

"Data export configuration (documented below)."

### fn spec.forProvider.storageClassAnalysis.withDataExportMixin

```ts
withDataExportMixin(dataExport)
```

"Data export configuration (documented below)."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.storageClassAnalysis.dataExport

"Data export configuration (documented below)."

### fn spec.forProvider.storageClassAnalysis.dataExport.withDestination

```ts
withDestination(destination)
```

"Specifies the destination for the exported analytics data (documented below)."

### fn spec.forProvider.storageClassAnalysis.dataExport.withDestinationMixin

```ts
withDestinationMixin(destination)
```

"Specifies the destination for the exported analytics data (documented below)."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.storageClassAnalysis.dataExport.withOutputSchemaVersion

```ts
withOutputSchemaVersion(outputSchemaVersion)
```

"Schema version of exported analytics data. Allowed values: V_1. Default value: V_1."

## obj spec.forProvider.storageClassAnalysis.dataExport.destination

"Specifies the destination for the exported analytics data (documented below)."

### fn spec.forProvider.storageClassAnalysis.dataExport.destination.withS3BucketDestination

```ts
withS3BucketDestination(s3BucketDestination)
```

"Analytics data export currently only supports an S3 bucket destination (documented below)."

### fn spec.forProvider.storageClassAnalysis.dataExport.destination.withS3BucketDestinationMixin

```ts
withS3BucketDestinationMixin(s3BucketDestination)
```

"Analytics data export currently only supports an S3 bucket destination (documented below)."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination

"Analytics data export currently only supports an S3 bucket destination (documented below)."

### fn spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.withBucketAccountId

```ts
withBucketAccountId(bucketAccountId)
```

"Account ID that owns the destination bucket."

### fn spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.withBucketArn

```ts
withBucketArn(bucketArn)
```

"ARN of the destination bucket."

### fn spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.withFormat

```ts
withFormat(format)
```

"Output format of exported analytics data. Allowed values: CSV. Default value: CSV."

### fn spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.withPrefix

```ts
withPrefix(prefix)
```

"Object prefix for filtering."

## obj spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnRef

"Reference to a Bucket in s3 to populate bucketArn."

### fn spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnRef.policy

"Policies for referencing."

### fn spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnSelector

"Selector for a Bucket in s3 to populate bucketArn."

### fn spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnSelector.policy

"Policies for selection."

### fn spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withBucket

```ts
withBucket(bucket)
```

"Name of the bucket this analytics configuration is associated with."

### fn spec.initProvider.withFilter

```ts
withFilter(filter)
```

"Object filtering that accepts a prefix, tags, or a logical AND of prefix and tags (documented below)."

### fn spec.initProvider.withFilterMixin

```ts
withFilterMixin(filter)
```

"Object filtering that accepts a prefix, tags, or a logical AND of prefix and tags (documented below)."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withName

```ts
withName(name)
```

"Unique identifier of the analytics configuration for the bucket."

### fn spec.initProvider.withStorageClassAnalysis

```ts
withStorageClassAnalysis(storageClassAnalysis)
```

"Configuration for the analytics data export (documented below)."

### fn spec.initProvider.withStorageClassAnalysisMixin

```ts
withStorageClassAnalysisMixin(storageClassAnalysis)
```

"Configuration for the analytics data export (documented below)."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.bucketRef

"Reference to a Bucket in s3 to populate bucket."

### fn spec.initProvider.bucketRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.bucketRef.policy

"Policies for referencing."

### fn spec.initProvider.bucketRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.bucketRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.bucketSelector

"Selector for a Bucket in s3 to populate bucket."

### fn spec.initProvider.bucketSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.bucketSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.bucketSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.bucketSelector.policy

"Policies for selection."

### fn spec.initProvider.bucketSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.bucketSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.filter

"Object filtering that accepts a prefix, tags, or a logical AND of prefix and tags (documented below)."

### fn spec.initProvider.filter.withPrefix

```ts
withPrefix(prefix)
```

"Object prefix for filtering."

### fn spec.initProvider.filter.withTags

```ts
withTags(tags)
```

"Key-value map of resource tags."

### fn spec.initProvider.filter.withTagsMixin

```ts
withTagsMixin(tags)
```

"Key-value map of resource tags."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.storageClassAnalysis

"Configuration for the analytics data export (documented below)."

### fn spec.initProvider.storageClassAnalysis.withDataExport

```ts
withDataExport(dataExport)
```

"Data export configuration (documented below)."

### fn spec.initProvider.storageClassAnalysis.withDataExportMixin

```ts
withDataExportMixin(dataExport)
```

"Data export configuration (documented below)."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.storageClassAnalysis.dataExport

"Data export configuration (documented below)."

### fn spec.initProvider.storageClassAnalysis.dataExport.withDestination

```ts
withDestination(destination)
```

"Specifies the destination for the exported analytics data (documented below)."

### fn spec.initProvider.storageClassAnalysis.dataExport.withDestinationMixin

```ts
withDestinationMixin(destination)
```

"Specifies the destination for the exported analytics data (documented below)."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.storageClassAnalysis.dataExport.withOutputSchemaVersion

```ts
withOutputSchemaVersion(outputSchemaVersion)
```

"Schema version of exported analytics data. Allowed values: V_1. Default value: V_1."

## obj spec.initProvider.storageClassAnalysis.dataExport.destination

"Specifies the destination for the exported analytics data (documented below)."

### fn spec.initProvider.storageClassAnalysis.dataExport.destination.withS3BucketDestination

```ts
withS3BucketDestination(s3BucketDestination)
```

"Analytics data export currently only supports an S3 bucket destination (documented below)."

### fn spec.initProvider.storageClassAnalysis.dataExport.destination.withS3BucketDestinationMixin

```ts
withS3BucketDestinationMixin(s3BucketDestination)
```

"Analytics data export currently only supports an S3 bucket destination (documented below)."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination

"Analytics data export currently only supports an S3 bucket destination (documented below)."

### fn spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.withBucketAccountId

```ts
withBucketAccountId(bucketAccountId)
```

"Account ID that owns the destination bucket."

### fn spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.withBucketArn

```ts
withBucketArn(bucketArn)
```

"ARN of the destination bucket."

### fn spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.withFormat

```ts
withFormat(format)
```

"Output format of exported analytics data. Allowed values: CSV. Default value: CSV."

### fn spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.withPrefix

```ts
withPrefix(prefix)
```

"Object prefix for filtering."

## obj spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnRef

"Reference to a Bucket in s3 to populate bucketArn."

### fn spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnRef.policy

"Policies for referencing."

### fn spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnSelector

"Selector for a Bucket in s3 to populate bucketArn."

### fn spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnSelector.policy

"Policies for selection."

### fn spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.storageClassAnalysis.dataExport.destination.s3BucketDestination.bucketArnSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."